# stock-alarm

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml  run.py
app/: __init__.py  config.py  models.py
app/routes/: main.py  settings.py
app/services/: llm.py  mail.py  stock.py
app/templates/: base.html  history.html  home.html  settings.html  stock_detail.html
deploy/: crontab  nginx.conf  setup.sh  stock-alarm.service
docs/: PROJECT_CONTEXT.md
prompts/: alert_mail.txt
scripts/: check_alert.py  migrate_threshold_lower.py  test_manual.py  update_stock_list.py
tests/: conftest.py  test_app.py  test_check_alert.py  test_config.py  test_models.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_routes.py  test_stock_detail.py
tests/e2e/: conftest.py  test_home.py  test_settings.py  test_stock_search.py
